--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ img {
     border-radius: 7px;
     box-shadow: 0px 0px 10px black;
     border: 1px solid rgba(90, 106, 246, 0.383);
-    background-color: rgb(200, 200, 200);
+    background-color: rgb(212, 212, 212);
 
 }
 #elige-moneda1{
@@ -38,11 +38,11 @@ img {
     top: 65%;
     left: 7%;
     width: 130px;
-    border: 1px solid rgba(90, 106, 246, 0.383);
+    border: 1px solid rgba(90, 106, 246, 0.5);
     border-radius: 7px;
     box-shadow: 0px 0px 10px black;
     text-align: center;
-    background-color: rgb(200, 200, 200);
+    background-color: rgb(212, 212, 212);
 
 
 }
@@ -51,11 +51,11 @@ img {
     top: 65%;
     left: 35%;
     width: 130px;
-    border: 1px solid rgba(90, 106, 246, 0.383);
+    border: 1px solid rgba(90, 106, 246, 0.5);
     border-radius: 7px;
     box-shadow: 0px 0px 10px black;
     text-align: center;
-    background-color: rgb(200, 200, 200);
+    background-color: rgb(212, 212, 212);
 
 
 }
@@ -64,7 +64,7 @@ img {
     top: 65%;
     left: 67%;
     width: 130px;
-    border: 1px solid rgba(90, 106, 246, 0.383);
+    border: 1px solid rgba(90, 106, 246, 0.5);
     border-radius: 7px;
     box-shadow: 0px 0px 10px black;
     text-align: center;
@@ -72,4 +72,15 @@ img {
 
 
 }
+button{
+    background-color: yellowgreen;
+    width: 130px;
+    border-radius: 7px;
+}
+input{
+    background-color: rgb(200, 200, 200);
+    width: 100%;
+
+}
+
 
