--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,28 @@
+
+
+/*   Paletad de Colores. 
+.color1 {color: #060623;}
+.color2 {color: #0c253f;}
+.color3 {color: #155665;}
+.color4 {color: #7aa3a4;}
+.color5 {color: #cadad8;}
+*/
+*{
+ font-family: 'Mitr', sans-serif;;
+}
 body{
-    background-color: rgb(224, 224, 224);
+    background-color: #155665;;;
 }
 .container-principal{
     position: relative;
     width: 500px;
     height: 300px;
     display: flex;
+    border: 2.5px solid #060623;
     border-radius: 30px;
-    box-shadow: 0px 0px 20px black;
+    box-shadow: 0px 0px 20px #29151c;
     margin: 20% auto;
-    background-color: rgb(202, 202, 202);
+    background-color: #7aa3a4;
     font-family: 'Inder', sans-serif;
     font-size: 100%;
 }
@@ -19,6 +32,10 @@ img {
     left: 230%;
     height: 30%;
 }
+
+
+
+
 #cantidad-dinero {
     
     position: absolute;
@@ -28,9 +45,9 @@ img {
     height: 19px;
     text-align: center;
     border-radius: 7px;
-    box-shadow: 0px 0px 10px black;
-    border: 1px solid rgba(90, 106, 246, 0.383);
-    background-color: rgb(212, 212, 212);
+    box-shadow: 0px 0px 10px #060623;
+    border: 1px solid #060623;
+    background-color: #cadad8;
 
 }
 #elige-moneda1{
@@ -38,11 +55,11 @@ img {
     top: 65%;
     left: 7%;
     width: 130px;
-    border: 1px solid rgba(90, 106, 246, 0.5);
+    border: 1px solid #060623;
     border-radius: 7px;
-    box-shadow: 0px 0px 10px black;
+    box-shadow: 0px 0px 10px #060623;
     text-align: center;
-    background-color: rgb(212, 212, 212);
+    background-color: #cadad8;;
 
 
 }
@@ -51,11 +68,11 @@ img {
     top: 65%;
     left: 35%;
     width: 130px;
-    border: 1px solid rgba(90, 106, 246, 0.5);
+    border: 1px solid #060623;
     border-radius: 7px;
-    box-shadow: 0px 0px 10px black;
+    box-shadow: 0px 0px 10px #060623;
     text-align: center;
-    background-color: rgb(212, 212, 212);
+    background-color: #cadad8;
 
 
 }
@@ -64,9 +81,9 @@ img {
     top: 65%;
     left: 67%;
     width: 130px;
-    border: 1px solid rgba(90, 106, 246, 0.5);
+    border: 1px solid #060623;
     border-radius: 7px;
-    box-shadow: 0px 0px 10px black;
+    box-shadow: 0px 0px 10px #060623;
     text-align: center;
     background-color: yellowgreen;
 
@@ -78,9 +95,21 @@ button{
     border-radius: 7px;
 }
 input{
-    background-color: rgb(200, 200, 200);
+    background-color: #cadad8;
     width: 100%;
 
 }
+#resultado {
+    
+    position: absolute;
+    top: 85%;
+    left: 20%;
+    width: 300px;
+    height: 19px;
+    text-align: center;
+    border-radius: 7px;
+    box-shadow: 0px 0px 10px #060623;
+    border: 1px solid #060623;
+    background-color: #cadad8;
 
-
+}
